--- a/JWSDispatchGroupSample/JWSDispatchGroupSample/Base.lproj/Main.storyboard
+++ b/JWSDispatchGroupSample/JWSDispatchGroupSample/Base.lproj/Main.storyboard
@@ -19,22 +19,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x6s-vj-OHp">
-                                <rect key="frame" x="20" y="81" width="80" height="50"/>
+                                <rect key="frame" x="20" y="81" width="120" height="50"/>
                                 <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="5Ku-nA-6fk"/>
+                                    <constraint firstAttribute="width" constant="120" id="5Ku-nA-6fk"/>
                                     <constraint firstAttribute="height" constant="50" id="TyN-Sb-2LS"/>
                                 </constraints>
-                                <state key="normal" title="Case 1"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Case 1 (notify)"/>
+                                <state key="highlighted" title="Click.."/>
                                 <connections>
                                     <action selector="onCase1:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eeu-i0-L01"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mvI-d8-N6d" userLabel="Case 1 (wait)">
+                                <rect key="frame" x="190" y="81" width="120" height="50"/>
+                                <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="UDm-cX-6NW"/>
+                                    <constraint firstAttribute="width" constant="120" id="hbz-bh-47T"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Case 2 (wait)"/>
+                                <state key="highlighted" title="Click.."/>
+                                <connections>
+                                    <action selector="onCase2:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YaG-dC-PCs"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hPX-gh-vyh">
                                 <rect key="frame" x="20" y="222" width="335" height="425"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Result Log" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eRu-ut-Icy">
@@ -49,19 +65,37 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="notify : asynchronous" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XXu-HX-PRE">
+                                <rect key="frame" x="20" y="141" width="139" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="wait : synchronous" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1CO-H1-DHg">
+                                <rect key="frame" x="190" y="141" width="121" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="eRu-ut-Icy" firstAttribute="top" secondItem="x6s-vj-OHp" secondAttribute="bottom" constant="50" id="4FH-Xn-TAu"/>
                             <constraint firstItem="x6s-vj-OHp" firstAttribute="top" secondItem="Lff-0B-6KT" secondAttribute="bottom" constant="20" id="5AP-In-PDu"/>
+                            <constraint firstItem="XXu-HX-PRE" firstAttribute="top" secondItem="x6s-vj-OHp" secondAttribute="bottom" constant="10" id="6rq-kk-zj1"/>
+                            <constraint firstItem="XXu-HX-PRE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="896-ih-nHd"/>
                             <constraint firstItem="Lff-0B-6KT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Awu-Mo-zJf"/>
                             <constraint firstItem="Lff-0B-6KT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="G7B-aN-Ivc"/>
                             <constraint firstItem="hPX-gh-vyh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="UUW-OZ-qdv"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hPX-gh-vyh" secondAttribute="trailing" constant="20" id="VVp-Gr-gGZ"/>
+                            <constraint firstItem="1CO-H1-DHg" firstAttribute="leading" secondItem="mvI-d8-N6d" secondAttribute="leading" id="VbL-lS-cV4"/>
                             <constraint firstItem="hPX-gh-vyh" firstAttribute="top" secondItem="eRu-ut-Icy" secondAttribute="bottom" constant="20" id="WfI-PX-zeR"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hPX-gh-vyh" secondAttribute="bottom" constant="20" id="iuv-F5-T7k"/>
                             <constraint firstItem="eRu-ut-Icy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="kLL-Uy-hVK"/>
+                            <constraint firstItem="mvI-d8-N6d" firstAttribute="leading" secondItem="x6s-vj-OHp" secondAttribute="trailing" constant="50" id="lJ0-mD-uxt"/>
+                            <constraint firstItem="1CO-H1-DHg" firstAttribute="top" secondItem="mvI-d8-N6d" secondAttribute="bottom" constant="10" id="pB9-X5-CgQ"/>
                             <constraint firstItem="x6s-vj-OHp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ymo-KM-ZZ0"/>
+                            <constraint firstItem="mvI-d8-N6d" firstAttribute="top" secondItem="Lff-0B-6KT" secondAttribute="bottom" constant="20" id="zmL-uh-4ta"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
