--- a/JWSDispatchGroupSample/JWSDispatchGroupSample/Base.lproj/Main.storyboard
+++ b/JWSDispatchGroupSample/JWSDispatchGroupSample/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                                     <action selector="onCase2:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YaG-dC-PCs"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hPX-gh-vyh">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hPX-gh-vyh">
                                 <rect key="frame" x="20" y="222" width="335" height="425"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
